<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_content_horizontal_margin"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textNippon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@animator/button_press_alpha"
                android:text="@string/item_id"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/illust_id"
                style="@style/textMontserratMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@animator/button_press_alpha"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textNippon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@animator/button_press_alpha"
                android:text="@string/user_id"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/user_id"
                style="@style/textMontserratMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@animator/button_press_alpha"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textNippon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_bookmark_count"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/like"
                style="@style/textMontserratMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textNippon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_count"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/visit"
                style="@style/textMontserratMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textNippon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/resolution"
                style="@style/textMontserratMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textNippon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_tool"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tools"
                style="@style/textMontserratMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/illust_link_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textNippon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/illust_in_browser"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/show_illust_in_browser"
                style="@style/textMontserratMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@animator/button_press_alpha"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_link_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textNippon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_in_browser"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/show_user_in_browser"
                style="@style/textMontserratMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@animator/button_press_alpha"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</layout>