<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/hot_tag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:stateListAnimator="@animator/button_press_alpha">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_center_4" />

                <TextView
                    style="@style/textNippon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/hot_tags"
                    android:textColor="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/manga"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:stateListAnimator="@animator/button_press_alpha">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_center_5" />

                <TextView
                    style="@style/textNippon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/recommend_manga"
                    android:textColor="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/latest_frame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:stateListAnimator="@animator/button_press_alpha">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_center_1" />


                <TextView
                    style="@style/textNippon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/latest_content"
                    android:textColor="@color/white" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/novel_frame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:stateListAnimator="@animator/button_press_alpha">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_center_3" />

                <TextView
                    style="@style/textNippon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/novel"
                    android:textColor="@color/white" />
            </FrameLayout>


        </LinearLayout>

    </FrameLayout>

</layout>